# CMake-cheatsheet

1. hello_world/: CMakeLists.txt  main.cpp
2. basic_project/: CMakeLists.txt  main.cpp  my_lib.h
3.1. intermediate_project/: CMakeLists.txt
3.1. intermediate_project/app/: CMakeLists.txt
3.1. intermediate_project/src/my_lib/: CMakeLists.txt
3.1. intermediate_project/src/my_lib2/: CMakeLists.txt  my_lib2.h
3.2. intermediate_project2/: CMakeLists.txt
3.2. intermediate_project2/app/: CMakeLists.txt
3.2. intermediate_project2/inc/my_lib/: CMakeLists.txt
3.2. intermediate_project2/inc/my_lib2/: CMakeLists.txt
3.2. intermediate_project2/src/: CMakeLists.txt
3.2. intermediate_project2/src/my_lib/: CMakeLists.txt  my_lib.cpp
3.2. intermediate_project2/src/my_lib2/: CMakeLists.txt
3.3. intermediate_project3/: CMakeLists.txt
3.3. intermediate_project3/app/: CMakeLists.txt  main.cpp
3.3. intermediate_project3/src/my_lib2/src/: my_lib2.cpp
4. Variable_and_options/: CMakeLists.txt  Makefile  main.cpp
4. Variable_and_options/src/: CMakeLists.txt  hello.cpp  hello.h
